--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.extraPaths": [
         "./script/gasCal",
-        "./script/apiBackend"
+        "./script/apiBackend",
+        "./script/trans"
     ]
 }
